--- a/stylesheets/Gizmo_API.css
+++ b/stylesheets/Gizmo_API.css
@@ -33,18 +33,48 @@
 
 
 .docblock {
+    position: relative;
     padding-left: 20px;
     /*border-bottom: 1px solid lightgray;*/
+
+    _border: 1px solid blue;
+
+    /* background-color: #fff; */
+
 }
 
 .docblock_header {
+
+    _border: 1px solid red;
+    width: 75%;
+
     font-weight: bold;
     font-size: 12pt;
-    padding: 20px;
+    _padding: 10px;
+    _padding-left: 5px;
+
+    position: relative;
+    top: 10px;
+
 }
 .docblock_body {
+
+    _border: 1px solid green;
+    width: 75%;
+
     font-size: 10pt;
-    padding-left:50px;
+    _padding: 10px;
+    _padding-left: 5px;
+
+    position: relative;
+    top: 20px;
+
+    /*
+    // The styling data we're after is actually in a class override for <pre> elements.
+    border: 2px solid black;
+    border-radius:25px;
+    */
+
 }
 
 
@@ -53,3 +83,31 @@ body{
 }
 
 
+
+
+.main_content_wrap {
+    background: #f2f2f2;
+    border-top: 1px solid #111;
+    border-bottom: 1px solid #111;
+}
+
+
+
+
+
+
+
+
+
+pre, code {
+    width: 95%;
+    color: #222;
+    background-color: #fff;
+
+    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+    font-size: 14px;
+
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
