--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -194,6 +194,8 @@ pre {
 }
 
 code {
+  width: 640px;
+  overflow: auto;
   padding: 3px;
   margin: 0 3px;
   box-shadow: 0 0 10px rgba(0,0,0,.1);
