--- a/stylesheets/searchform.css
+++ b/stylesheets/searchform.css
@@ -1,59 +1,27 @@
-/* search form
--------------------------------------- */
-.searchform {
-    display: inline-block;
-    zoom: 1; /* ie7 hack for display:inline-block */
-    *display: inline;
-    border: solid 1px #d2d2d2;
-    padding: 3px 5px;
+#search {
 
-    -webkit-border-radius: 2em;
-    -moz-border-radius: 2em;
-    border-radius: 2em;
-
-    -webkit-box-shadow: 0 1px 0px rgba(0,0,0,.1);
-    -moz-box-shadow: 0 1px 0px rgba(0,0,0,.1);
-    box-shadow: 0 1px 0px rgba(0,0,0,.1);
-
-    background: #f1f1f1;
-    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
-    background: -moz-linear-gradient(top,  #fff,  #ededed);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed'); /* ie7 */
-    -ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed'); /* ie8 */
-    }
-.searchform input {
-    font: normal 12px/100% Arial, Helvetica, sans-serif;
 }
-.searchform .searchfield {
-    background: #fff;
-    padding: 6px 6px 6px 8px;
-    width: 202px;
-    border: solid 1px #bcbbbb;
-    outline: none;
 
-    -webkit-border-radius: 2em;
-    -moz-border-radius: 2em;
-    border-radius: 2em;
-
-    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
-    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
-    box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
+#search input[type="text"] {
+    background: url(search-dark.png) no-repeat 10px 6px #444;
+    border: 0 none;
+    font: bold 12px Arial,Helvetica,Sans-serif;
+    color: #777;
+    width: 150px;
+    padding: 6px 15px 6px 35px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+    -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+    -webkit-transition: all 0.7s ease 0s;
+    -moz-transition: all 0.7s ease 0s;
+    -o-transition: all 0.7s ease 0s;
+    transition: all 0.7s ease 0s;
 }
-.searchform .searchbutton {
-    color: #fff;
-    border: solid 1px #494949;
-    font-size: 11px;
-    height: 27px;
-    width: 27px;
-    text-shadow: 0 1px 1px rgba(0,0,0,.6);
 
-    -webkit-border-radius: 2em;
-    -moz-border-radius: 2em;
-    border-radius: 2em;
-
-    background: #5f5f5f;
-    background: -webkit-gradient(linear, left top, left bottom, from(#9e9e9e), to(#454545));
-    background: -moz-linear-gradient(top,  #9e9e9e,  #454545);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); /* ie7 */
-    -ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); /* ie8 */
-    }
+#search input[type="text"]:focus {
+    width: 200px;
+}
