Updates for page to display group logos.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -440,3 +440,11 @@ Small Device Styles
   }
 
 }
+
+
+
+.trophy{
+    border: 0px solid grey;
+    text-align: center;
+    vertical-align: middle;
+}
